src/test/deca/context/valid/assign-float.deca
// Description:
//    Assign un float
//
// Resultats:
//    //
//
// Historique:
//    cree le 06/01/2023

{
    float i;
    i = 2.0;
}